--- a/login_page.html
+++ b/login_page.html
@@ -14,3 +14,6 @@
 <input type="password" id="password" name="password" placeholder="enter your password" required>
 <button type="submit">login</button>
 </form>
+</div>
+</body>
+</html>
