--- a/registration_form.html
+++ b/registration_form.html
@@ -47,7 +47,7 @@ document.getElementById("register-form").addEventListener("submit", function(eve
     localStorage.setItem("email", email);
 
 
-    window.location.href = "main_page.html";
+    window.location.href = "index.html";
 
 });
 </script>
