--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>main web page</title>
-     <link rel="stylesheet" href="style_main_page.css">
+     <link rel="stylesheet" href="style_index.css">
 </head>
 <body>
     <h2 id="welcome"></h2>
