--- a/index.html
+++ b/index.html
@@ -24,5 +24,18 @@
         document.getElementById("welcome").innerText = "No registration data found.";
     }
 </script>
+<div class="container">
+
+<p>login for more features</p>
+<form id="opening-page" action="#" method="post" class="opening-page">
+<label for="username">username</label>
+<input type="text" id="username" name="username" placeholder="enter your user name" required>
+<label for="password">password</label>
+<input type="password" id="password" name="password" placeholder="enter your password" required>
+<a href="login_page.html"><button type="submit">login</button></a>
+<h3>or</h3>
+<h2>register yourself if you are new</h2>
+<a href="registration_form.html"><button type="button">register</button></a>
+</form>
 </body>
 </html>
