--- a/login_page.html
+++ b/login_page.html
@@ -12,7 +12,7 @@
 <input type="text" id="username" name="username" placeholder="enter your user name" required>
 <label for="password">password</label>
 <input type="password" id="password" name="password" placeholder="enter your password" required>
-<button type="submit">login</button>
+<a href="index.html"><button type="submit">login</button></a>
 </form>
 </div>
 </body>
