--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <p>login for more features</p>
 
-<a href="login_page.html"><button type="submit">login</button></a>
+<a href="login_page.html"><button type="button">login</button></a>
 <h3>or</h3>
 <h2>register yourself if you are new</h2>
 <a href="registration_form.html"><button type="button">register</button></a>
