--- a/opening_page.html
+++ b/opening_page.html
@@ -13,7 +13,7 @@
 <input type="text" id="username" name="username" placeholder="enter your user name" required>
 <label for="password">password</label>
 <input type="password" id="password" name="password" placeholder="enter your password" required>
-<a href="index.html"><button type="submit">login</button></a>
+<a href="login_page.html"><button type="submit">login</button></a>
 <h3>or</h3>
 <h2>register yourself if you are new</h2>
 <a href="registration_form.html"><button type="button">register</button></a>
