--- a/login_page.html
+++ b/login_page.html
@@ -12,8 +12,15 @@
 <input type="text" id="username" name="username" placeholder="enter your user name" required>
 <label for="password">password</label>
 <input type="password" id="password" name="password" placeholder="enter your password" required>
-<a href="index.html"><button type="button">login</button></a>
+<button type="submit">login</button>
 </form>
 </div>
+
+<script>
+document.getElementById("login-form").addEventListener("submit", function(event){
+    event.preventDefault();
+    window.location.href = "index.html";
+});
+</script>
 </body>
 </html>
